Last Update of GUI
FINAL UPDATE for GUI and Detect NETWORK Changes

--- a/FYPPacketSniffer/app/src/main/AndroidManifest.xml
+++ b/FYPPacketSniffer/app/src/main/AndroidManifest.xml
@@ -19,11 +19,19 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />.
+                <action android:name="android.net.wifi.STATE_CHANGE"/>
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
