--- a/FYPPacketSniffer/app/src/main/AndroidManifest.xml
+++ b/FYPPacketSniffer/app/src/main/AndroidManifest.xml
@@ -18,14 +18,16 @@
         android:supportsRtl="true"
         android:theme="@style/MyToolbarTheme">
         <activity android:name=".SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
